fix: button of close-fotm was fixed

--- a/blocks/popup/__close-form/popup__close-form.css
+++ b/blocks/popup/__close-form/popup__close-form.css
@@ -2,7 +2,7 @@
   width: 40px;
   height: 40px;
   background-image:
-    url(./images/close_icon.svg);
+    url(../../../images/close_icon.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 40px 40px;
