--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -1,5 +1,12 @@
 .card__like {
   margin-right: 30px;
+  margin-top: 31px;
+  width: 22px;
+  height: 19px;
+  background-color: white;
+  background-image:
+    url(../../../images/heart.svg);
+    border: none;
 }
 
 .card__like:hover {
