--- a/blocks/popup/__close-form/popup__close-form.css
+++ b/blocks/popup/__close-form/popup__close-form.css
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-size: 40px 40px;
   background-color: transparent;
-  position: fixed;
+  position: absolute;
   top: -40px;
   right: -40px;
   border: none;
