--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,10 +1,7 @@
 .popup__container {
   width: 430px;
   border-radius: 10px;
-  position: fixed;
-  top: 195px;
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative;
   background-color: white;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
