--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,11 @@
 .popup {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
   background-color:rgba(0, 0, 0, .5);
   display: none;
+  justify-content: center;
+  align-items: center;
 }
