--- a/blocks/profile/__buttom-edit-name/profile__button-edit-name.css
+++ b/blocks/profile/__buttom-edit-name/profile__button-edit-name.css
@@ -2,7 +2,7 @@
   height: 24px;
   width: 24px;
   border: 1px solid #FFF;
-  background-color: black;
+  background-color: transparent;
   box-sizing: border-box;
   background-image:
     url(../../../images/pen.svg);
