--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -2,7 +2,7 @@
   width: 150px;
   height: 50px;
   border: 2px solid #FFF;
-  background-color: black;
+  background-color: transparent;
   box-sizing: border-box;
   background-image:
     url(../../../images/plus.svg);
