--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -7,6 +7,8 @@
   background-image:
     url(../../../images/heart.svg);
     border: none;
+  opacity: 1;
+  transition: .3s linear;
 }
 
 .card__like:hover {
