--- a/blocks/popup/__item-profile/popup__item-profile.css
+++ b/blocks/popup/__item-profile/popup__item-profile.css
@@ -8,6 +8,6 @@
   line-height: 17px;
   border-bottom: 1px solid  rgba(0, 0, 0, .2);
   margin: 30px auto 0;
-  padding-bottom: 13px;
+  padding: 0 0 7px;
   color: black;
 }
