--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -1,7 +1,8 @@
 .popup__save {
   width: 100%;
   height: 50px;
-  margin: 48px auto 37px;
+  margin: 50px auto;
+  padding: 0;
   background-color: black;
   color: white;
   font-family: 'Inter', ‘Arial’, sans-serif;
@@ -11,6 +12,8 @@
   line-height: 22px;
   border: 0;
   border-radius: 2px;
+  opacity: 1;
+  transition: .3s linear;
 }
 
 .popup__save:hover {
@@ -23,5 +26,6 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin: 45px auto 25px;
   }
 }
