--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -3,11 +3,23 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: normal;
+  max-width: calc(350px - 42px);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width:1000px) {
   .profile__text {
     font-size: 14px;
     line-height: 19px;
+    max-width: calc(250px - 36px);
+  }
+}
+
+@media screen and (max-width:550px) {
+  .profile__text {
+    text-align: center;
+    margin: 16px auto 0;
   }
 }
