--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -4,6 +4,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  max-width: calc(242px - 24px);
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
