--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
 
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__element/card__element.css);
+@import url(../blocks/card/__trash/card__trash.css);
 @import url(../blocks/card/__info/card__info.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like/card__like.css);
