--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,7 +5,10 @@
   top: 0;
   left: 0;
   background-color:rgba(0, 0, 0, .5);
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transition: visibility .5s, opacity .5s linear;
+  visibility: hidden;
 }
