feat: add openPopupView

--- a/pages/index.css
+++ b/pages/index.css
@@ -40,3 +40,12 @@
 @import url(../blocks/popup/__item-profile/popup__item-profile.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__close-form/popup__close-form.css);
+
+@import url(../blocks/popup-view/popup-view.css);
+@import url(../blocks/popup-view/_opened/popup-view_opened.css);
+@import url(../blocks/popup-view/__container/popup-view__container.css);
+@import url(../blocks/popup-view/__window/popup-view__window.css);
+@import url(../blocks/popup-view/__image/popup-view__image.css);
+@import url(../blocks/popup-view/__about/popup-view__about.css);
+@import url(../blocks/popup-view/__close/popup-view__close.css);
+
