--- a/pages/index.css
+++ b/pages/index.css
@@ -40,11 +40,14 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__edit-profile/popup__edit-profile.css);
 @import url(../blocks/popup/__item-profile/popup__item-profile.css);
+@import url(../blocks/popup/__item-profile/_type/popup__item-profile_type_error.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_inactive/popup__save_inactive.css);
 @import url(../blocks/popup/__close-form/popup__close-form.css);
 @import url(../blocks/popup/__window/popup__window.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__about/popup__about.css);
-
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
 
 
