--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,7 @@
 @import url(../blocks/popup/__container/_form/popup__container_form.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__edit-profile/popup__edit-profile.css);
+@import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__item-profile/popup__item-profile.css);
 @import url(../blocks/popup/__item-profile/_type/popup__item-profile_type_error.css);
 @import url(../blocks/popup/__save/popup__save.css);
