--- a/src/blocks/card/__column-like/card__column-like.css
+++ b/src/blocks/card/__column-like/card__column-like.css
@@ -1,7 +1,7 @@
-.card__info {
-  background-color: white;
+.card__column-like {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
+  margin-right: 20px;
 }
-
