--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -26,6 +26,8 @@
 @import url(../blocks/card/__trash/card__trash.css);
 @import url(../blocks/card/__info/card__info.css);
 @import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__column-like/card__column-like.css);
+@import url(../blocks/card/__card__count/card__count.css);
 @import url(../blocks/card/__like/card__like.css);
 @import url(../blocks/card/__like/_active/card__like_active.css);
 
@@ -43,6 +45,7 @@
 @import url(../blocks/popup/__item-profile/popup__item-profile.css);
 @import url(../blocks/popup/__item-profile/_type/popup__item-profile_type_error.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_type/popup__save_type_confirm.css);
 @import url(../blocks/popup/__save/_inactive/popup__save_inactive.css);
 @import url(../blocks/popup/__close-form/popup__close-form.css);
 @import url(../blocks/popup/__window/popup__window.css);
