--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__element/card__element.css);
 @import url(../blocks/card/__trash/card__trash.css);
+@import url(../blocks/card/__trash/_active/card__trash_active.css);
 @import url(../blocks/card/__info/card__info.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__column-like/card__column-like.css);
