--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__column/profile__column.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-edit/profile__avatar-edit.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__row/profile__row.css);
 @import url(../blocks/profile/__name/profile__name.css);
